k8s/rook-ceph-cluster/objectstore.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-objectstore
spec:
  parentRefs:
    - namespace: traefik
      name: traefik-gateway
  hostnames:
    - "rgw.k8s.szp.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-rgw-rook-ceph-objectstore
          port: 80
